project(proxy)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_MULTITHREADED      ON)
find_package(Boost 1.55.0 REQUIRED COMPONENTS log filesystem thread system)
if(Boost_FOUND)

    if(NOT Boost_USE_STATIC_LIBS)
        add_definitions(-DBOOST_LOG_DYN_LINK)
    endif()

    include_directories(${Boost_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})

endif()
